--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -17,6 +17,6 @@ jobs:
 
       - name: Build with Maven
         run: |
-            mvn -B package --file DemoGithubActions/pom.xml
+            mvn -B package --file pom.xml
             ls -l DemoGithubActions/target
         
