--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -6,9 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -17,6 +18,6 @@ jobs:
 
       - name: Build with Maven
         run: |
-            mvn -B package --file pom.xml
-            ls -l DemoGithubActions/target
+          mvn -B package --file pom.xml
+          ls -l DemoGithubActions/target
         
