--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -23,6 +23,6 @@ jobs:
 
       - name: Build with Maven
         run: |
-          mvn -B package --file pom.xml
-          ls -l DemoGithubActions/target
+          mvn -B package --file DemoGithubActions/pom.xml
+          ls -l 
         
