--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Build with Maven
         run: |
           mvn -B package --file pom.xml
-          ls -l 
+          ls -l target/
         
