--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -25,4 +25,39 @@ jobs:
         run: |
           mvn -B package --file pom.xml
           ls -l target/
+      - name: Upload JAR file
+        uses: actions/upload-artifact@v4
+        with:
+          name: DemoGithubActions
+          path: target/DemoGithubActions.jar
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: DemoGithubActions
+          path: target/DemoGithubActions.jar
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: joehaddy/spring-boot-app:latest
         
