--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: DemoGithubActions
-          path: target/DemoGithubActions.jar
+          path: DemoGithubActions/target/
 
   docker-build:
     runs-on: ubuntu-latest
@@ -45,7 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: DemoGithubActions
-          path: target/DemoGithubActions.jar
+          path: DemoGithubActions/target/
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
