--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: DemoGithubActions
-          path: DemoGithubActions/target/*.jar
+          path: ./target/
 
   docker-build:
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: DemoGithubActions
-          path: DemoGithubActions/target/*.jar
+          path: ./target/
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
