--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -60,7 +60,7 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: build
+    needs: sonarqube
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
