--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Ensure full history is fetched for SonarQube analysis
 
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
