source code app updated features

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -48,7 +48,7 @@ jobs:
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5 
         with:
-          projectBaseDir: ./target/
+          projectBaseDir: DemoGithubActions
           args: >
             -Dsonar.organization=${{ vars.SONAR_ORG }}
             -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }}
