--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Required for SonarQube to access GitHub
         with:
-          projectBaseDir: DemoGithubActions
+          projectBaseDir: ./target/
           args: >
             -Dsonar.organization=${{ vars.SONAR_ORG }}
             -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }}
