source code updated filter

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -52,12 +52,11 @@ jobs:
         with:
           projectBaseDir: .
           args: >
-            -Dsonar.organization=${{ vars.SONAR_ORG }}
-            -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }}
-            -Dsonar.projectVersion=${{ vars.PROJECT_VERSION }}
-            -Dsonar.java.binaries=target/classes
-            -Dsonar.verbose=false 
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+             run: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+             -Dsonar.organization=${{ secrets.SONAR_ORG }} \
+             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
             
 
   docker-build:
