source code newest filter

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -46,17 +46,20 @@ jobs:
           path: ./target/
 
       - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5 
+        uses: SonarSource/sonarqube-scan-action@v5
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Required for SonarQube to access GitHub
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: .
+          projectBaseDir: .   
           args: >
-             run: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-             -Dsonar.organization=your-sonar-org \
-             -Dsonar.projectKey=your-sonar-project-key \
-             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.organization=${{ secrets.SONAR_ORG }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.projectVersion=${{ vars.PROJECT_VERSION }}
+            -Dsonar.java.binaries=target/classes
+            -Dsonar.verbose=false
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.branch.name=${{ github.ref_name }}
+
             
 
   docker-build:
