--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -51,10 +51,13 @@ jobs:
       - name: Build & Analyze with Maven
         run: |
          mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-         -Dsonar.organization=your-sonar-org \
-         -Dsonar.projectKey=your-sonar-project-key \
-         -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-         -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+         -Dsonar.organization=${{ secrets.SONAR_ORG }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.projectVersion=${{ vars.PROJECT_VERSION }}
+            -Dsonar.java.binaries=target/classes
+            -Dsonar.verbose=false
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.branch.name=${{ github.ref_name }}
 
 
             
