--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -47,6 +47,8 @@ jobs:
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Build & Analyze with Maven
         run: |
