--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -1,4 +1,5 @@
 name: Demo Workflow
+
 on:
   push:
     branches:
@@ -25,6 +26,7 @@ jobs:
         run: |
           mvn -B package --file pom.xml
           ls -l target/
+
       - name: Upload JAR file
         uses: actions/upload-artifact@v4
         with:
@@ -37,33 +39,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Ensure full history is fetched for SonarQube analysis
+          fetch-depth: 0
 
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
-          name: DemoGithubActions # Ensure the artifact name matches the upload step
+          name: DemoGithubActions
           path: ./target/
-
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Build & Analyze with Maven
         run: |
-         mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-         args: >
-         -Dsonar.organization=${{ secrets.SONAR_ORG }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.projectVersion=${{ vars.PROJECT_VERSION }}
-            -Dsonar.java.binaries=target/classes
-            -Dsonar.verbose=false
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+          mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.organization=${{ secrets.SONAR_ORG }} \
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.projectVersion=${{ vars.PROJECT_VERSION }} \
+            -Dsonar.java.binaries=target/classes \
+            -Dsonar.verbose=false \
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.branch.name=${{ github.ref_name }}
-
-
-            
 
   docker-build:
     runs-on: ubuntu-latest
@@ -97,4 +91,3 @@ jobs:
           file: Dockerfile
           push: true
           tags: joehaddy/spring-boot-app:latest
-        
