source code app newest feature

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -45,7 +45,7 @@ jobs:
           name: DemoGithubActions
           path: ./target/
 
-      - name: Build & Analyze with Maven # SonarQube
+      - name: Build & Analyze with Maven 
         run: |
          mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:5.1.0.4751:sonar \
          -Dsonar.organization=${{ secrets.SONAR_ORG }} \
@@ -53,6 +53,7 @@ jobs:
          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
            -Dsonar.branch.name=${{ github.ref_name }} 
+           -Dsonar.branch.name=main
 
 
 
