source code app  latest filter

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Build & Analyze with Maven 
         run: |
-         mvn sonar:sonar \
+         mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar \
          -Dsonar.organization=${{ secrets.SONAR_ORG }} \
          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
