source code app lastest feature

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -49,16 +49,16 @@ jobs:
         run: |
          mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar \
          -Dsonar.organization=${{ secrets.SONAR_ORG }} \
-         -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+         -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \ 
          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
          -Dsonar.branch.name=${{ github.ref_name }} 
-         -Dsonar.branch.name=main
+         -Dsonar.branch.name=main 
 
 
 
   docker-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # This job runs after the sonarqube job
     needs: sonarqube
     steps:
       - name: Checkout repository
