--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -58,7 +58,7 @@ jobs:
 
 
   docker-build:
-    runs-on: ubuntu-latest # This job runs after the sonarqube job
+    runs-on: ubuntu-latest 
     needs: sonarqube 
     steps:
       - name: Checkout repository
