source code apps fixed

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -45,15 +45,15 @@ jobs:
           name: DemoGithubActions
           path: ./target/
 
-      - name: Build & Analyze with Maven 
-        run: |
-         mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar \
-         -Dsonar.organization=${{ secrets.SONAR_ORG }} \
-         -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \ 
-         -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-         -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-         -Dsonar.branch.name=${{ github.ref_name }} 
-         -Dsonar.branch.name=main 
+      - name: SonarQube Scan
+        uses: sonarsource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORG }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.branch.name=${{ github.ref_name }}
 
 
 
