--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -47,12 +47,13 @@ jobs:
 
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v2
+        env: 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
             -Dsonar.organization=${{ secrets.SONAR_ORG }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
             -Dsonar.branch.name=${{ github.ref_name }}
 
 
