source code apps feature fixed

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -55,6 +55,7 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
             -Dsonar.branch.name=${{ github.ref_name }}
+             -Dsonar.branch.name=main 
 
 
 
