source code apps clear filter

--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: SonarQube Analysis with Maven
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed for automatic PR decoration
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # SonarQube token
         run: |
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
