--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -50,7 +50,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
         run: |
-          mvn clean verify sonar:sonar -X -e \
+           echo "Starting SonarCloud analysis..."
+            mvn sonar:sonar -X -e \
             -Dsonar.organization=${{ secrets.SONAR_ORG }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
