--- a/.github/workflows/demo-file.yml
+++ b/.github/workflows/demo-file.yml
@@ -50,8 +50,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
         run: |
-          echo "=== Starting SonarCloud Analysis ==="
-           mvn sonar:sonar \
+          echo "Starting SonarCloud analysis..."
+            mvn sonar:sonar \
             -Dsonar.organization=${{ secrets.SONAR_ORG }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
